...
            android:id="@+id/add4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/add5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/addDescription"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="Inserisci descrizione"/>

    <Button
        android:id="@+id/okReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="OK"/>

    <Button
        android:id="@+id/annullaReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
...
