...
        android:backgroundTint="#E88E07"
        android:fontFamily="@font/armata"
        android:layout_toRightOf="@+id/theBearers"
        android:text="Leggi" />

    <Button
        android:id="@+id/addReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/theBearers"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="#E88E07"
        android:fontFamily="@font/armata"
        android:text="Aggiungi Recensione" />

    <Button
        android:id="@+id/removeReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addReview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="#E88E07"
        android:fontFamily="@font/armata"
        android:text="Rimuovi Recensione" />



</RelativeLayout>
