...
    <item android:title="Home"
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"/>
    <item android:title="Profilo"
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"/>
    <item android:title="Settings"
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"/>
</menu>
